some added items

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <div class="feature">
           <img src="img/byk.png" alt="fretur photo" />
-          <h6>Promotion</h6>
+          <h6>Promotions</h6>
         </div>
 
         <div class="feature">
